miniextendr-macros/tests/ui/derive_dataframe_enum_empty_named_variant.stderr
error: DataFrameRow align: variants must have at least one named field
 --> tests/ui/derive_dataframe_enum_empty_named_variant.rs:7:5
  |
7 |     A {},
  |     ^
